--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "start nodemon app.js"
+    "dev": "start nodemon index.js",
+    "start": "node deploy-commands.js && node index.js"
   },
   "author": "",
   "license": "ISC",
